# vpp-agent

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  _settings.py  constants.py  main.py
src/db/instruction/: sort_folders_en.json  sort_folders_ja.json  sort_folders_vi.json
src/middleware/: __init__.py  _base.py  executor_agent_middleware.py  plan_agent_middleware.py
src/model/: __init__.py  _agent.py  _context.py  _log.py  _plan.py  _request.py  _response.py  _search.py  _tool.py
src/nodes/: __init__.py  _executor_agent.py  _plan_agent.py  _utils.py
src/tools/: __init__.py
src/tools/business_tool/: __init__.py  _common_tool.py  _search_tool.py  _utils.py  search_tool.py
src/tools/plan_tool/: __init__.py  _plan_tools.py
src/tools/validate_tool/: __init__.py  _validate_tool.py
src/utility/: logger.py
src/workflow/: plan_workfolw_v1.py
tests/agents/: test_plan_agent.py
